# tmc

./: .gitignore  .gitmodules  build_android.sh  debug.keystore  xmake.lua
android/: build.gradle  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/matheovignaud/tmc/: LauncherActivity.java  RomPickerActivity.java  TmcActivity.java  TmcPresentation.java  TmcTouchActivity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/jni/: CMakeLists.txt  test_format.cpp
android/app/src/main/jni/SDL/src/video/android/: SDL_androidwindow.c
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml
include/gba/: eeprom.h
libs/fmt/: color.h  format.h
port/: port_android_jni.cpp  port_asset_bootstrap.cpp  port_asset_loader.cpp  port_bios.c  port_gba_mem.c  port_gba_mem.h  port_launcher_bootstrap.cpp  port_launcher_bootstrap.h  port_m4a_backend.cpp  port_main.c  port_ppu.cpp  port_ppu.h  port_rom.c  port_runtime_config.cpp  port_runtime_config.h  port_save.c  port_touch_controls.cpp  port_touch_controls.h
src/: eeprom.c
